syntax = "proto3";

package common.protobuf;
import "Data.proto";

//向route注册
message SRRegisterServer {
	int32 server_id = 1;				//服务器ID
	int32 server_type = 2;				//类型
	repeated int32 scene_id_list = 3;	//所提供的场景服务
}

//route广播注册信息
message RSDispatchServer {
	int32 connect_id = 1;
	int32 server_id = 2;
	int32 server_type = 3;
	repeated int32 scene_id_list = 4;
}

//登陆结果返回
message LRLoginResult {
	int32 result_code = 1;
	int32 user_id = 2;
}

//玩家顶号
message LRPlayerRepeat{
	int32 player_id = 1;
}

//服务器间远程调用
message SSRemoteCall {
	int32 remote_id = 1;
	bytes data = 2;
	int32 to_server_id = 3;
	int32 to_scene_id = 4;
	int32 from_server_id = 5;
	int32 callback_id = 6;
}

//服务器间远程调用返回 
message SSRemoteResult {
	bytes data = 1;
	int32 to_server_id = 2;
	int32 from_server_id = 3;
	int32 callback_id = 4;
}

//玩家登陆
message RSPlayerLogin{
	int32 player_id = 1;
}

//玩家离线
message RSPlayerDisconnect{
	int32 player_id = 1;
}

//玩家登出
message RSPlayerLogout{
	int32 player_id = 1;
}

//加载玩家数据完成
message SRLoadPlayerComplete{
	int32 player_id = 1;
}

//切出场景
message SRChangeOutScene{
	PlayerStruct player_Struct = 1;
	int32 to_server_id = 2;
	int32 to_scene_id = 3;
}

//切入场景
message RSChangeInScene{
	PlayerStruct player_Struct = 1;
}
